Add link-url attribute

--- a/src/import.test.html
+++ b/src/import.test.html
@@ -6,5 +6,9 @@
   </head>
   <body>
     <weather-widget appid="a3a9091e1bd3e95feca71910648fb7c0"></weather-widget>
+    <weather-widget
+      appid="a3a9091e1bd3e95feca71910648fb7c0"
+      url="https://tenki.jp/forecast/3/16/4410/13104/"
+    ></weather-widget>
   </body>
 </html>
